<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.coderamg.Fragment.TrackFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_track" />


    <fragment
        android:id="@+id/bottom_home"
        android:name="com.example.coderamg.Fragment.TrackFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_track" />

    <fragment
        android:id="@+id/bottom_artical"
        android:name="com.example.coderamg.Fragment.ArticalFragment"
        android:label="@string/title_artical"
        tools:layout="@layout/fragment_artical" />

    <fragment
        android:id="@+id/bottom_book"
        android:name="com.example.coderamg.Fragment.BookFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/bottom_program_languages"
        android:name="com.example.coderamg.Fragment.LanguesFragment"
        android:label="@string/programming_languages"
        tools:layout="@layout/fragment_langues" />



</navigation>